# social_media

./: manage.py  pyproject.toml  requirements.txt
social_media/: asgi.py  settings.py  urls.py  wsgi.py
user_profile/: models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
